--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
             <version>5.7.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -52,7 +58,7 @@
                             <goal>report</goal>
                         </goals>
                     </execution>
-                    <execution>
+                    <!--<execution>
                         <id>check</id>
                         <goals>
                             <goal>check</goal>
@@ -70,7 +76,7 @@
                                 </rule>
                             </rules>
                         </configuration>
-                    </execution>
+                    </execution>-->
                 </executions>
             </plugin>
         </plugins>
